# autonomous_warehouse_guided_robot

./: README.md  package.xml  setup.py
config/: controllers.yaml
forklift_bot/: box_detector.py  forklift_controller.py  mission_controller.py
launch/: mission.launch.py
urdf/: robot.urdf.xacro
worlds/: warehouse.world
